# mgnp

./: Cargo.toml  README.md  justfile  rust-toolchain.toml  spec.md  thinking-about-the-code.md  thinking-about-the-wire.md
.config/: nextest.toml
.github/workflows/: CI.yml
source/calliope/: Cargo.toml  PROTOCOL.md  README.md
source/calliope/src/: client.rs  conn_table.rs  discovery.rs  lib.rs  message.rs  registry.rs  req_rsp.rs
source/calliope/src/req_rsp/: tests.rs
source/calliope/src/tests/: e2e.rs  mod.rs
source/conn-table/: Cargo.toml
source/conn-table/src/: lib.rs
source/mgnp/: Cargo.toml
source/mgnp-pitch/: Cargo.toml
source/mgnp-pitch/src/: conn_table.rs  lib.rs  message.rs  registry.rs
source/mgnp-pitch/tests/: integration.rs  support.rs
source/mgnp/src/: channel.rs  client.rs  conn_table.rs  connector.rs  lib.rs  message.rs  registry.rs
source/mgnp/src/tests/: e2e.rs  integration.rs  mod.rs
source/mgnp/tests/: integration.rs  support.rs
source/mini-reg/: Cargo.toml
source/mini-reg/src/: lib.rs
source/plugtail/: Cargo.toml
source/plugtail/src/: lib.rs
source/plugtail/tests/: mutex_slice.rs
source/tricky-pipe/: Cargo.toml  README.md
source/tricky-pipe/src/: arc_impl.rs  bidi.rs  channel_core.rs  error.rs  frame.rs  lib.rs  loom.rs  oneshot.rs  serbox.rs  spitebuf.rs  static_impl.rs  tests.rs  tp1.rs  tp2.rs  tp3.rs  typeinfo.rs
source/tricky-pipe/src/mpsc/: arc_impl.rs  channel_core.rs  error.rs  mod.rs  static_impl.rs  tests.rs
source/tricky-pipe/src/tp3/: arc_impl.rs  channel_core.rs  error.rs  static_impl.rs  tests.rs
