[package]
name = "mgnp-pitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"

[dependencies.serde]
version = "1.0.188"
default-features = false
features = ["derive"]

[dependencies.uuid]
version = "1.4.1"
default-features = false
features = ["v4"]

[dependencies.spitebuf]
git = "https://github.com/tosc-rs/mnemos"
rev = "416b7d59fbc7fa889a774f54133786a584eb8732"

[dependencies.maitake]
version = "0.1"