[package]
name = "mgnp-pitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"
tracing = { version = "0.1.21", default-features = false }
postcard = { version = "1.0.7", default-features = false }

[dependencies.futures]
version = "0.3.17"
default-features = false
features = ["async-await"]

[dependencies.serde]
version = "1.0.188"
default-features = false
features = ["derive"]

[dependencies.uuid]
version = "1.4.1"
default-features = false
features = ["v4", "serde"]

[dependencies.spitebuf]
git = "https://github.com/tosc-rs/mnemos"
rev = "416b7d59fbc7fa889a774f54133786a584eb8732"

[dependencies.tricky-pipe]
path = "../tricky-pipe"

[dependencies.maitake]
version = "0.1"

[dev-dependencies]
postcard = { version = "1.0.7", features = ["alloc"] }
proptest = "1.3.1"
proptest-derive = "0.4"