[package]
name = "tricky-pipe"
version = "0.1.0"
edition = "2021"
description = """
Tricky Pipe is a channel that has interchangeable ends to allow for
transparent serialization and deserialization
"""
authors = [
    "Eliza Weisman <eliza@elizas.website>",
    "James Munns <james@onevariable.com>",
]
readme = "./README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tosc-rs/mgnp"
homepage = "https://mnemos.dev"
categories = [
    "embedded",
    "no-std",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
alloc = ["postcard/alloc"]

[dependencies]
maitake-sync = "0.1.0"
mycelium-bitfield = { version = "0.1.3", default-features = false}
portable-atomic = "1.4.3"
mnemos-bitslab = { git = "https://github.com/tosc-rs/mnemos", branch = "eliza/bitslab-loom" }
futures = { version = "0.3", features = ["async-await"], default-features = false }

[dependencies.postcard]
version = "1.0.7"

[dependencies.serde]
version = "1.0.188"
features = ["derive"]
default-features = false

[dev-dependencies]
tracing = "0.1.39"
maitake-sync = { version = "0.1.0", features = ["tracing"] }
# ensure `std`/`alloc` support in `serde` and `postcard` are always enabled when
# building tests.
serde = { version = "1.0.188", features = ["derive", "std"] }
postcard = { version = "1.0.7", features = ["alloc"] }

[target.'cfg(not(loom))'.dev-dependencies]
futures = { version = "0.3.16" }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "ansi"] }
tokio = { version = "1.33", features = ["macros", "rt"] }

[target.'cfg(loom)'.dev-dependencies]
loom = { version = "0.7", features = ["futures", "checkpoint"] }
